[package]

name = "snowflake"
version = "1.2.0"
authors = ["Steven Allen <steven@stebalien.com>"]

description = "A module for generating guaranteed process unique IDs."
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/Stebalien/snowflake"
homepage = "https://github.com/Stebalien/snowflake"
documentation = "https://stebalien.github.io/snowflake/snowflake"

[dev-dependencies]
time = "*"
uuid = "*"
rand = "*"
threadpool = "*"

[dependencies.clippy]
version = "0"
optional = true

[features]
default=[]
