[package]

name = "snowflake"
version = "1.2.0"
authors = ["Steven Allen <steven@stebalien.com>"]

description = "A module for generating guaranteed process unique IDs."
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/Stebalien/snowflake"
homepage = "https://github.com/Stebalien/snowflake"
documentation = "https://stebalien.github.io/snowflake/snowflake"

[dependencies]
serde = { version = "*", optional = true }
serde_derive = { version = "*", optional = true }

[dev-dependencies]
time = "0.1"
uuid = "0.1"
rand = "0.3"
threadpool = "0.2"

[features]
default=[]

serde_support = ["serde_derive"]
