[package]

name = "snowflake"
version = "1.3.0"
authors = ["Steven Allen <steven@stebalien.com>"]
edition = "2018"

description = "A module for generating guaranteed process unique IDs."
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/Stebalien/snowflake"
homepage = "https://github.com/Stebalien/snowflake"
documentation = "https://docs.rs/snowflake"

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
time = "0.1"
uuid = { version = "0.7", features = ["v4"] }
rand = "0.6"
threadpool = "1"

[features]
default=[]

serde_support = ["serde", "serde_derive"]
